feat: externalize repository configuration to YAML file
Moved hard-coded repository definitions from config.py to external YAML
configuration file for easier management. Users can now add, remove, or
modify repositories without editing Python code by simply editing
config/repositories.yaml.

New repository_loader module handles loading, validation, and enum mapping
from YAML. Configuration path can be overridden via REPOSITORIES_CONFIG
environment variable. Includes repos_base_dir configuration for flexible
clone location. Updated all documentation to reflect new configuration pattern.

Backward compatible with fallback to in-code defaults if YAML loading fails.

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,11 @@ GITHUB_TOKEN=your_github_pat_token_here
 # Set to 'development' to enable debug logging
 # ENVIRONMENT=production
 
-# Override base directory for cloned repositories
+# Override path to repository configuration file
+# Default: config/repositories.yaml
+# REPOSITORIES_CONFIG=config/repositories.yaml
+
+# Override base directory for cloned repositories (if not set in repositories.yaml)
 # REPOS_BASE_DIR=./repos
 
 # =============================================================================
