refactor: make MCP server general-purpose with shared collections config
Transforms MCP server from ARDA-specific to general-purpose implementation
by removing hardcoded collection names, prompts, and domain-specific tools.
Introduces shared collections.yaml config consumed by both ingest pipeline
and MCP server to ensure naming consistency.

Key changes:
- Add config/collections.yaml as single source of truth for collection names
- Update ingest config.py to load collections from YAML (backward compatible)
- Create mcp/src/config.py for shared config loading
- Rewrite mcp/src/collections.py to be config-driven (no hardcoded names)
- Remove all 12 ARDA-specific prompts from MCP
- Simplify resources to 2 generic ones (vector://collections, vector://search-tips)
- Reduce tools from 30 to 4 core tools (list_collections, get_collection_info, semantic_search, cross_collection_search)
- Remove domain, metadata, code_quality, and analytics tool modules
- Update server name to "code-ingest-mcp" and remove ARDA branding
- Replace arda:// URIs with vector:// scheme
- Add COLLECTIONS_CONFIG env var for custom config paths
- Update all documentation for minimal, general-purpose usage

Net result: -2,800 lines, fully repo-agnostic MCP server that works with
any ingested codebase by sharing collection config with ingestion pipeline.

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,10 @@ GITHUB_TOKEN=your_github_pat_token_here
 # Override base directory for cloned repositories (if not set in repositories.yaml)
 # REPOS_BASE_DIR=./repos
 
+# Override collections configuration file path (shared between ingest and MCP)
+# Default: config/collections.yaml
+# COLLECTIONS_CONFIG=config/collections.yaml
+
 # =============================================================================
 # Notes
 # =============================================================================
