--- a/mcp/.env.example
+++ b/mcp/.env.example
@@ -1,19 +1,67 @@
-# Qdrant Vector Database (Required for MCP server)
-QDRANT_URL="your_qdrant_cloud_url_here"               # Required: Format: https://xxxxx.gcp.cloud.qdrant.io
-QDRANT_API_KEY="your_qdrant_api_key_here"             # Required: JWT token for Qdrant authentication
+# =============================================================================
+# MCP Server Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your actual values
+# Never commit .env to git (it should be in .gitignore)
 
-# Embedding Endpoint (Required for semantic search)
+# =============================================================================
+# Required: Vector Database (Qdrant)
+# =============================================================================
+QDRANT_URL=https://your-qdrant-instance.qdrant.io
+QDRANT_API_KEY=your_qdrant_api_key_here
+
+# =============================================================================
+# Required: Embedding Service (Cloudflare AI Gateway + DeepInfra)
+# =============================================================================
+
+# Cloudflare AI Gateway endpoint
 # Format: https://gateway.ai.cloudflare.com/v1/{account_id}/{gateway_id}
 # The /custom-deepinfra/embeddings path will be appended automatically
-EMBEDDING_ENDPOINT="https://gateway.ai.cloudflare.com/v1/{account_id}/{gateway_id}"  # Required: Full base URL
-CLOUDFLARE_API_TOKEN="your_cloudflare_api_token_here"  # Required: Cloudflare AI Gateway token for authentication
-DEEPINFRA_API_KEY="your_deepinfra_api_key_here"       # Required: Deep Infra provider API key
-EMBEDDING_MODEL="custom-deepinfra/Qwen/Qwen2.5-7B-Instruct-Embedding"  # Optional: Model name (default: custom-deepinfra/Qwen/Qwen2.5-7B-Instruct-Embedding)
+EMBEDDING_ENDPOINT=https://gateway.ai.cloudflare.com/v1/{account_id}/{gateway_id}
 
-# GitHub Configuration (Required for dynamic MCP resources)
-GHCR_TOKEN="your_github_token_here"                   # Required: Personal Access Token with repo read access
-ARDA_CREDIT_REPO_URL="git@github.com:ardaglobal/arda-credit.git"    # Required: Arda Credit backend repo URL
-ARDA_CREDIT_PLATFORM="git@github.com:ardaglobal/arda-platform.git"  # Required: Arda Platform repo URL
+# Cloudflare AI Gateway token (for authentication)
+# Get from: https://dash.cloudflare.com/profile/api-tokens
+CLOUDFLARE_API_TOKEN=your_cloudflare_token_here
 
-# OpenRouter API (Optional, for LLM features)
-OPENROUTER_API_KEY="your_openrouter_key_here"         # Optional: Format: sk-or-v1-...
+# DeepInfra API key (provider API key for embedding model)
+# Get from: https://deepinfra.com/dash/api_keys
+DEEPINFRA_API_KEY=your_deepinfra_api_key_here
+
+# Embedding model (optional, default: custom-deepinfra/Qwen/Qwen2.5-7B-Instruct-Embedding)
+# EMBEDDING_MODEL=custom-deepinfra/Qwen/Qwen2.5-7B-Instruct-Embedding
+
+# =============================================================================
+# Optional: Collections Configuration
+# =============================================================================
+
+# Path to shared collections config (YAML file defining collection names)
+# This ensures MCP searches the same collections that ingest writes to
+# Default: config/collections.yaml (relative to workspace root)
+# COLLECTIONS_CONFIG=config/collections.yaml
+
+# =============================================================================
+# Optional: GitHub Integration
+# =============================================================================
+
+# GitHub Personal Access Token (for future features, not currently required)
+# GHCR_TOKEN=your_github_token_here
+
+# =============================================================================
+# Notes
+# =============================================================================
+# Required variables:
+#   - QDRANT_URL
+#   - QDRANT_API_KEY
+#   - EMBEDDING_ENDPOINT
+#   - CLOUDFLARE_API_TOKEN
+#   - DEEPINFRA_API_KEY
+#
+# Optional variables:
+#   - EMBEDDING_MODEL (has sensible default)
+#   - COLLECTIONS_CONFIG (defaults to config/collections.yaml)
+#   - GHCR_TOKEN (for future GitHub features)
+#
+# Quick setup:
+#   1. Copy this file: cp mcp/.env.example mcp/.env
+#   2. Fill in your credentials
+#   3. Run: python mcp/server.py
