--- a/mcp/requirements.txt
+++ b/mcp/requirements.txt
@@ -18,6 +18,7 @@ scikit-learn>=1.3.0
 
 # Environment and Configuration
 python-dotenv>=1.0.0
+pyyaml>=6.0.0
 
 # Optional: For development and testing
 pytest>=7.4.0
