refactor: generalize toolkit from ARDA-specific to general-purpose
Transforms code-ingest from an ARDA-opinionated tool to a generic,
config-driven code ingestion and search system. All hard-coded ARDA
references replaced with config-driven or generic patterns.

Documentation:
- README: generic use case focus, removed ARDA project references
- All docs: replaced arda-credit, arda_code_rust with {prefix}/generic examples
- Config files: added prominent customization comments

Ingestion Pipeline:
- Fallback collections: generic names (code_rust, frontend, api_contracts)
- Fallback repos: single generic example with warning
- Config helpers: now accept config dict parameters for dynamic resolution
- Services: removed arda-credit-app path branches, use generic patterns
- Parsers: generic component detection, removed repo-specific logic
- Dependency analyzer: _is_arda_package → _is_internal_package

MCP Server:
- Docstrings: "Code Ingestion MCP" instead of "Arda Vector Database"
- Query router: generic service patterns, no hard-coded arda- repos
- Domain tools: all collections loaded from _collections_config dynamically
- GitHub utils: generalized to REPO_URL_1..N environment variables
- Resource URIs: confirmed vector:// throughout (arda:// removed from docs)

All collection and repository names now flow from config/collections.yaml
and config/repositories.yaml, with generic fallbacks when YAML is missing.

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DEEPINFRA_API_KEY=your_deepinfra_api_key_here
 # Get Modal credentials from: https://modal.com/settings
 # MODAL_TOKEN_ID=your_modal_token_id_here
 # MODAL_TOKEN_SECRET=your_modal_token_secret_here
-# MODAL_ENDPOINT=https://ardaglobal--embed.modal.run
+# MODAL_ENDPOINT=https://your-org--embed.modal.run
 
 # =============================================================================
 # Required for Repository Cloning: GitHub Personal Access Token
