feat: add Docker Compose local setup with SurrealDB vector backend
Introduces complete local-first deployment option using Docker Compose with
SurrealDB as an alternative to cloud-hosted Qdrant. Adds vector backend
abstraction layer enabling seamless switching between Qdrant (cloud) and
SurrealDB (local) via environment configuration.

Core Changes:
- Vector backend abstraction protocol with factory pattern
- SurrealDB vector client with HNSW index support (4096D, cosine)
- Updated all components to use backend abstraction
- Added upsert_points() method to eliminate direct client access
- Refactored MCP server for backend-agnostic operation

Docker Compose Setup:
- Three-service architecture: SurrealDB + Ingestion + MCP Server
- One-shot ingestion service with completion tracking
- MCP health endpoint reporting SurrealDB and ingestion status
- Proper service dependencies and healthchecks
- Persistent volumes for vector data

Additional Features:
- HTTP health endpoint for MCP server (port 8001)
- Validation script for setup verification
- Comprehensive Docker documentation
- Environment templates for Docker deployment

Files Added: 13 new files (Docker, SurrealDB client, health server, docs)
Files Modified: 15 core components (abstraction, MCP, scripts)

Maintains full backward compatibility with existing Qdrant deployments.

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,27 @@
 # Never commit .env to git (it should be in .gitignore)
 
 # =============================================================================
-# Required: Vector Database (Qdrant)
+# Required: Vector Database Backend Selection
+# =============================================================================
+# Choose backend: 'qdrant' (cloud/remote) or 'surrealdb' (local/docker)
+VECTOR_BACKEND=qdrant
+
+# =============================================================================
+# Qdrant Configuration (when VECTOR_BACKEND=qdrant)
 # =============================================================================
 QDRANT_URL=https://your-qdrant-instance.qdrant.io
 QDRANT_API_KEY=your_qdrant_api_key_here
+
+# =============================================================================
+# SurrealDB Configuration (when VECTOR_BACKEND=surrealdb)
+# =============================================================================
+# For Docker Compose: use http://surrealdb:8000
+# For local development: use http://localhost:8000
+SURREALDB_URL=http://localhost:8000
+SURREALDB_NS=code_ingest
+SURREALDB_DB=vectors
+SURREALDB_USER=root
+SURREALDB_PASS=root
 
 # =============================================================================
 # Required: Embedding Service (Choose One)
