--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,12 @@ DEEPINFRA_API_KEY=your_deepinfra_api_key_here
 # Optional: Override DeepInfra base URL (default: https://api.deepinfra.com/v1/openai)
 # DEEPINFRA_EMBEDDING_BASE_URL=https://api.deepinfra.com/v1/openai
 
+# Optional: Chunks per embedding request (default: 15 for standard model; use 25–100 for -batch model)
+# BATCH_SIZE=15
+
+# Optional: Embedding request timeout in seconds (default: 120; standard model can be slower)
+# EMBEDDING_TIMEOUT=120
+
 # =============================================================================
 # Required for Repository Cloning: GitHub Personal Access Token
 # =============================================================================
@@ -41,6 +47,9 @@ GITHUB_TOKEN=your_github_pat_token_here
 # =============================================================================
 # Set to 'development' to enable debug logging
 # ENVIRONMENT=production
+
+# Log level for ingest container (DEBUG, INFO, WARNING, ERROR). INFO shows file/chunk/batch progress.
+# LOG_LEVEL=INFO
 
 # Override path to repository configuration file
 # Default: config/repositories.yaml
