--- a/Dockerfile.ingest
+++ b/Dockerfile.ingest
@@ -18,6 +18,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY modules/ ./modules/
 COPY config/ ./config/
+COPY scripts/ ./scripts/
 COPY .env.example .env
 
 # Create directories
